[add] Formulário de Veiculo

--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -7,8 +7,35 @@
     <main id="content" class="content" role="main">
         <ol class="breadcrumb">
             <li>Consulta</li>
-            <li class="active">Carror e Utilitários Pequenos</li>
         </ol>
+        <h1 class="page-title"><span class="fw-semi-bold">Carros e Utilitários Pequenos</span></h1>
+        <div class="row">
+            <div class="col-lg-6">
+                <section class="widget">
+                    <header>
+                        <div class="widget-controls">
+                            <a href="#"><i class="glyphicon glyphicon-cog"></i></a>
+                            <a href="#"><i class="fa fa-refresh"></i></a>
+                            <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                        </div>
+                    </header>
+                    <div class="widget-body">
+                        <form class="form-horizontal form-label-left" role="form">
+                            <fieldset>
+                                <div class="form-group row">
+                                    <label class="col-md-4 control-label" for="Selecione-Marca">Selecione a Marca do Veiculo</label>
+                                    <div class="col-md-8">
+                                        <select id="SelecionarVeiculo" data-placeholder="Selecionar Veiculo" class="select2 form-control" tabindex="-1" name="Veiculo">
+
+                                        </select>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </section>
+            </div>
+        </div>
     </main>
 
 </div>
