--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<VeiculoProtegido.Application.ViewModels.MarcaViewModel>
 @{
     ViewBag.Title = "Carro";
 }
@@ -26,7 +26,6 @@
                                     <label class="col-md-4 control-label" for="Selecione-Marca">Selecione a Marca do Veiculo</label>
                                     <div class="col-md-8">
                                         <select id="SelecionarVeiculo" data-placeholder="Selecionar Veiculo" class="select2 form-control" tabindex="-1" name="Veiculo">
-
                                         </select>
                                     </div>
                                 </div>
