--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Teste.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Teste.cshtml
@@ -1,8 +1,6 @@
-﻿@model IEnumerable<VeiculoProtegido.Application.ViewModels.MarcaViewModel>
-@{
-    ViewBag.Title = "Carro";
+﻿@{
+    ViewBag.Title = "Home Page";
 }
-
 <div class="content-wrap">
     <main id="content" class="content" role="main">
         <ol class="breadcrumb">
@@ -25,17 +23,23 @@
                                 <div class="form-group row">
                                     <label class="col-md-4 control-label" for="MarcaSelect">Selecione a Marca do Veiculo</label>
                                     <div class="col-md-8">
-                                        <select id="MarcaSelect"
-                                                data-placeholder="Selecionar Veiculo"
-                                                class="select2 form-control"
-                                                tabindex="-1"
-                                                name="Marca">
-                                            <option value=""></option>
-                                            @foreach (var marca in Model)
-                                            {
-                                                <option value="@marca.codigo">@marca.nome</option>
-                                            }
-                                        </select>
+                                        <p>
+                                            <div class="row">
+                                                <label for="cboEstado" class="control-label">Estado</label>
+                                                <select id="cboEstado" class="form-control">
+                                                    <option value="SP">São Paulo</option>
+                                                    <option value="RJ">Rio de Janeiro</option>s
+                                                </select>
+                                            </div>
+                                        </p>
+                                        <p>
+                                            <div class="row">
+                                                <label for="cboCidade" class="control-label">Cidade</label>
+                                                <select id="cboCidade" class="form-control"></select>
+                                                <br />
+                                                <button type="button" id="btnValorCidade" class="btn btn-primary">Ver valor Cidade</button>
+                                            </div>
+                                        </p>
                                     </div>
                                 </div>
                             </fieldset>
@@ -46,16 +50,5 @@
         </div>
     </main>
 </div>
-@section scripts{
-    <script>
-        $(document).ready(function () {
-            $("#MarcaSelect").change(function () {
-                Alerta($(this).val());
-            });
-        });
-        function Alerta()
-        {
-            alert('zub');
-        }
-    </script>}
-
+<!-- page specific js -->
+<script src="~/js/teste.js"></script>
