--- a/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                     </a>
                     <ul id="sidebar-forms" class="collapse">
                         <li><a href="@Url.Action("FormElements")">Form Elements</a></li>
-                        <li><a href="@Url.Action("Carro", "Fipe")">Carro</a></li>
+                        <li><a href="@Url.Action("Teste", "Fipe")">Carro</a></li>
                         <li><a href="form_validation.html">Form Validation</a></li>
                         <li><a href="form_wizard.html">Form Wizard</a></li>
                     </ul>
@@ -707,11 +707,12 @@
         </div>
     </div>
     @RenderBody()
+
+
     <!-- The Loader. Is shown when pjax happens -->
     <div class="loader-wrap hiding hide">
         <i class="fa fa-circle-o-notch fa-spin-fast"></i>
     </div>
-
     <!-- common libraries. required for every page-->
     <script src="vendor/jquery/dist/jquery.min.js"></script>
     <script src="vendor/jquery-pjax/jquery.pjax.js"></script>
@@ -721,7 +722,7 @@
     <script src="vendor/bootstrap/js/dist/dropdown.js"></script>
     <script src="vendor/bootstrap/js/dist/button.js"></script>
     <script src="vendor/bootstrap/js/dist/tooltip.js"></script>
-    <script src="vendor/bootstrap/js/dist/alert.js"></script>
+    <script src="vendor/bootstrap/js/dist/alert.js"></script>>
     <script src="vendor/slimScroll/jquery.slimscroll.js"></script>
     <script src="vendor/widgster/widgster.js"></script>
     <script src="vendor/pace.js/pace.js" data-pace-options='{ "target": ".content-wrap", "ghostTime": 1000 }'></script>
@@ -733,7 +734,7 @@
     <script src="js/app.js"></script>
 
     <!-- page specific libs -->
-    <script id="test" src="vendor/underscore/underscore.js"></script>
+    <script id="test" src="~/vendor/underscore/underscore.js"></script>
     <script src="vendor/jquery.sparkline/index.js"></script>
     <script src="vendor/jquery.sparkline/index.js"></script>
     <script src="vendor/d3/d3.min.js"></script>
@@ -744,9 +745,11 @@
     <script src="vendor/jQuery-Mapael/js/maps/world_countries.js"></script>
     <script src="vendor/bootstrap/js/dist/popover.js"></script>
     <script src="vendor/bootstrap_calendar/bootstrap_calendar/js/bootstrap_calendar.min.js"></script>
-    <script src="vendor/jquery-animateNumber/jquery.animateNumber.min.js"></script>
+    <script src="vendor/jquery-animateNumber/jquery.animateNumber.min.js"></script>>
 
     <!-- page specific js -->
     <script src="js/index.js"></script>
+    @*@RenderSection("scripts", required: false)*@
+
 </body>
 </html>
