--- a/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                     </a>
                     <ul id="sidebar-forms" class="collapse">
                         <li><a href="@Url.Action("FormElements")">Form Elements</a></li>
-                        <li><a href="@Url.Action("Teste", "Fipe")">Carro</a></li>
+                        <li><a href="@Url.Action("Carro", "Fipe")">Carro</a></li>
                         <li><a href="form_validation.html">Form Validation</a></li>
                         <li><a href="form_wizard.html">Form Wizard</a></li>
                     </ul>
