--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -10,7 +10,7 @@
         </ol>
         <h1 class="page-title"><span class="fw-semi-bold">Carros e Utilitários Pequenos</span></h1>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-5">
                 <section class="widget">
                     <header>
                         <div class="widget-controls">
@@ -20,7 +20,6 @@
                         </div>
                     </header>
                     <div class="widget-body">
-                        @*<form class="form-horizontal form-label-left" role="form">*@
                         <form role="form">
                             <fieldset>
                                 <div class="row">
@@ -63,6 +62,14 @@
                                     </div>
                                 </div>
                             </fieldset>
+                            <div class="form-actions">
+                                <div class="row">
+                                    <div class="col-sm-offset-4 col-sm-7">
+                                        <button id="btnConsultar" type="button" class="btn btn-primary">Consultar</button>
+                                        <button id="btnConsultar" type="button" class="btn btn-inverse">Cancel</button>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </section>
