[add] Botao de consulta retornando o valor do veiculo

--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -66,7 +66,7 @@
                                 <div class="row">
                                     <div class="col-sm-offset-4 col-sm-7">
                                         <button id="btnConsultar" type="button" class="btn btn-primary">Consultar</button>
-                                        <button id="btnConsultar" type="button" class="btn btn-inverse">Cancel</button>
+                                        <button id="btnCancelar" type="button" class="btn btn-inverse">Cancelar</button>
                                     </div>
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                 <section class="widget">
                     <header>
                         <h4>
-                            Color <span class="fw-semi-bold">Options</span>
+                            <span class="fw-semi-bold">Veiculo</span>
                         </h4>
                         <div class="widget-controls">
                             <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
@@ -89,10 +89,11 @@
                         </div>
                     </header>
                     <div class="widget-body">
-                        <p class="fs-mini text-muted">
-                            Use any of the available button classes to quickly create a styled button.
-                            Semantically distinguishable beauty.
-                        </p>
+                        <div class="form-group">
+                            <p class="Valor">
+
+                            </p>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -100,6 +101,7 @@
 
     </main>
 </div>
+
 <!-- The Loader. Is shown when pjax happens -->
 <div class="loader-wrap hiding hide">
     <i class="fa fa-circle-o-notch fa-spin-fast"></i>
