--- a/src/VeiculoProtegido.UI.Mvc/Views/Account/Login.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Account/Login.cshtml
@@ -5,59 +5,86 @@
 }
 
 <h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
+<body class="login-page">
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    <div class="container">
+        <main id="content" class="widget-login-container" role="main">
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 col-xs-10 col-lg-offset-4 col-sm-offset-3 col-xs-offset-1">
+                    <h4 class="widget-login-logo animated fadeInUp">
+                        <i class="fa fa-circle text-gray"></i>
+                        sing
+                        <i class="fa fa-circle text-warning"></i>
+                    </h4>
+                    <section class="widget widget-login animated fadeInUp">
+                        <header>
+                            <h3>Login to your Sing App</h3>
+                        </header>
+                        <div class="widget-body">
+                            <p class="widget-login-info">
+                                Use Facebook, Twitter or your email to sign in.
+                            </p>
+                            <p class="widget-login-info">
+                                Don't have an account? Sign up now!
+                            </p>
+                            <form class="login-form mt-lg">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Username">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" id="pswd" type="text" placeholder="Password">
+                                </div>
+                                <div class="clearfix">
+                                    <div class="btn-toolbar pull-right">
+                                        <button type="button" class="btn btn-default btn-sm">Create an Account</button>
+                                        <a class="btn btn-inverse btn-sm" href="index.html">Login</a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6 col-sm-push-6">
+                                        <div class="clearfix">
+                                            <div class="checkbox widget-login-info pull-right ml-n-lg">
+                                                <input type="checkbox" id="checkbox1" value="1">
+                                                <label for="checkbox1">Keep me signed in </label>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-6 col-sm-pull-6">
+                                        <a class="mr-n-lg" href="#">Trouble with account?</a>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </main>
+        <footer class="page-footer">
+            2016 &copy; Veiculo Protegido.
+        </footer>
+    </div>
+    <!-- The Loader. Is shown when pjax happens -->
+    <div class="loader-wrap hiding hide">
+        <i class="fa fa-circle-o-notch fa-spin-fast"></i>
+    </div>
+
+    <!-- common libraries. required for every page-->
+    <script src="~/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="~/vendor/jquery-pjax/jquery.pjax.js"></script>
+    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
+    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
+    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
+    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
+    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
+    <script src="~/vendor/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
+    <script src="~/vendor/slimScroll/jquery.slimscroll.min.js"></script>
+    <script src="~/vendor/widgster/widgster.js"></script>
+
+    <!-- common app js -->
+    <script src="~/js/settings.js"></script>
+    <script src="~/js/app.js"></script>
+
+    <!-- page specific libs -->
+    <!-- page specific js -->
+</body>
