--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -88,13 +88,13 @@
                             <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
                         </div>
                     </header>
-                    <div class="widget-body">
                         <div class="form-group">
-                            <p class="Valor">
-
-                            </p>
+                            <label id ="lblValor" class="col-sm-4 control-label" for="disabled-input">Valor</label>
+                            <div class="col-sm-7">
+                                <input type="text" id="txtValor" class="form-control"
+                                       disabled="disabled" value="Default value">
+                            </div>
                         </div>
-                    </div>
                 </section>
             </div>
         </div>
