[add] Resultado trazendo marca, modelo, ano, combustivel

--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -88,12 +88,57 @@
                             <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
                         </div>
                     </header>
-                        <div class="form-group">
-                            <label id ="lblValor" class="col-sm-4 control-label" for="disabled-input">Valor</label>
-                            <div class="col-sm-7">
-                                <input type="text" id="txtValor" class="form-control"
-                                       disabled="disabled" value="Default value">
-                            </div>
+                    <div class="widget-body">
+                        <form role="form">
+                            <fieldset>
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        <div class="form-group">
+                                            <label id="lblMarca" class="col-sm-4 control-label" for="disabled-input">Marca</label>
+                                            <div class="col-sm-7">
+                                                <input type="text" id="txtMarca" class="form-control"
+                                                       disabled="disabled" value="Default value">
+                                            </div>
+                                            <div class="form-group">
+                                                <label id="lblModelo" class="col-sm-4 control-label" for="disabled-input">Modelo</label>
+                                                <div class="col-sm-7">
+                                                    <input type="text" id="txtModelo" class="form-control"
+                                                           disabled="disabled" value="Default value">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label id="lblAno" class="col-sm-4 control-label" for="disabled-input">Ano</label>
+                                                <div class="col-sm-7">
+                                                    <input type="text" id="txtAno" class="form-control"
+                                                           disabled="disabled" value="Default value">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label id="lblCombustivel" class="col-sm-4 control-label" for="disabled-input">Combustivel</label>
+                                                <div class="col-sm-7">
+                                                    <input type="text" id="txtCombustivel" class="form-control"
+                                                           disabled="disabled" value="Default value">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label id="lblCodigoFipe" class="col-sm-4 control-label" for="disabled-input">Código FIPE</label>
+                                                <div class="col-sm-7">
+                                                    <input type="text" id="txtCodigoFipe" class="form-control"
+                                                           disabled="disabled" value="Default value">
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label id="lblValor" class="col-sm-4 control-label" for="disabled-input">Valor</label>
+                                                <div class="col-sm-7">
+                                                    <input type="text" id="txtValor" class="form-control"
+                                                           disabled="disabled" value="Default value">
+                                                </div>
+                                            </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </fieldset>
+                            </form>
                         </div>
                 </section>
             </div>
