[change] do resulta obtido pela consulta da FIPE de input para label

--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -95,55 +95,36 @@
                                     <div class="col-md-8">
                                         <div class="form-group">
                                             <label id="lblMarca" class="col-sm-4 control-label" for="disabled-input">Marca</label>
-                                            <div class="col-sm-7">
-                                                <input type="text" id="txtMarca" class="form-control"
-                                                       disabled="disabled" value="Default value">
-                                            </div>
-                                            <div class="form-group">
-                                                <label id="lblModelo" class="col-sm-4 control-label" for="disabled-input">Modelo</label>
-                                                <div class="col-sm-7">
-                                                    <input type="text" id="txtModelo" class="form-control"
-                                                           disabled="disabled" value="Default value">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label id="lblAno" class="col-sm-4 control-label" for="disabled-input">Ano</label>
-                                                <div class="col-sm-7">
-                                                    <input type="text" id="txtAno" class="form-control"
-                                                           disabled="disabled" value="Default value">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label id="lblCombustivel" class="col-sm-4 control-label" for="disabled-input">Combustivel</label>
-                                                <div class="col-sm-7">
-                                                    <input type="text" id="txtCombustivel" class="form-control"
-                                                           disabled="disabled" value="Default value">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label id="lblCodigoFipe" class="col-sm-4 control-label" for="disabled-input">Código FIPE</label>
-                                                <div class="col-sm-7">
-                                                    <input type="text" id="txtCodigoFipe" class="form-control"
-                                                           disabled="disabled" value="Default value">
-                                                </div>
-                                            </div>
-                                            <div class="form-group">
-                                                <label id="lblValor" class="col-sm-4 control-label" for="disabled-input">Valor</label>
-                                                <div class="col-sm-7">
-                                                    <input type="text" id="txtValor" class="form-control"
-                                                           disabled="disabled" value="Default value">
-                                                </div>
-                                            </div>
-                                            </div>
+                                            <label id="txtMarca" class="col-sm-7 control-label" for="disabled-input">Marca</label>
+                                        </div>
+                                        <div class="form-group">
+                                            <label id="lblModelo" class="col-sm-4 control-label" for="disabled-input">Modelo</label>
+                                            <label id="txtModelo" class="col-sm-12 control-label" for="disabled-input">Modelo</label>
+                                        </div>
+                                        <div class="form-group">
+                                            <label id="lblAno" class="col-sm-4 control-label" for="disabled-input">Ano</label>
+                                            <label id="txtAno" class="col-sm-7 control-label" for="disabled-input">Ano</label>
+                                        </div>
+                                        <div class="form-group">
+                                            <label id="lblCombustivel" class="col-sm-4 control-label" for="disabled-input">Combustivel</label>
+                                            <label id="txtCombustivel" class="col-sm-7 control-label" for="disabled-input">Combustivel</label>
+                                        </div>
+                                        <div class="form-group">
+                                            <label id="lblCodigoFipe" class="col-sm-4 control-label" for="disabled-input">Código FIPE</label>
+                                            <label id="txtCodigoFipe" class="col-sm-7 control-label" for="disabled-input">Código FIPE</label>
+                                        </div>
+                                        <div class="form-group">
+                                            <label id="lblValor" class="col-sm-4 control-label" for="disabled-input">Valor</label>
+                                            <label id="txtValor" class="col-sm-7 control-label" for="disabled-input">Valor</label>
                                         </div>
                                     </div>
-                                </fieldset>
-                            </form>
-                        </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
                 </section>
             </div>
         </div>
-
     </main>
 </div>
 
