[change] FIPE: com campos de valor como input

--- a/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Fipe/Carro.cshtml
@@ -92,33 +92,30 @@
                         <form role="form">
                             <fieldset>
                                 <div class="row">
-                                    <div class="col-md-8">
-                                        <div class="form-group">
-                                            <label id="lblMarca" class="col-sm-4 control-label" for="disabled-input">Marca</label>
-                                            <label id="txtMarca" class="col-sm-7 control-label" for="disabled-input">Marca</label>
-                                        </div>
-                                        <div class="form-group">
-                                            <label id="lblModelo" class="col-sm-4 control-label" for="disabled-input">Modelo</label>
-                                            <label id="txtModelo" class="col-sm-12 control-label" for="disabled-input">Modelo</label>
-                                        </div>
-                                        <div class="form-group">
-                                            <label id="lblAno" class="col-sm-4 control-label" for="disabled-input">Ano</label>
-                                            <label id="txtAno" class="col-sm-7 control-label" for="disabled-input">Ano</label>
-                                        </div>
-                                        <div class="form-group">
-                                            <label id="lblCombustivel" class="col-sm-4 control-label" for="disabled-input">Combustivel</label>
-                                            <label id="txtCombustivel" class="col-sm-7 control-label" for="disabled-input">Combustivel</label>
-                                        </div>
-                                        <div class="form-group">
-                                            <label id="lblCodigoFipe" class="col-sm-4 control-label" for="disabled-input">Código FIPE</label>
-                                            <label id="txtCodigoFipe" class="col-sm-7 control-label" for="disabled-input">Código FIPE</label>
-                                        </div>
-                                        <div class="form-group">
-                                            <label id="lblValor" class="col-sm-4 control-label" for="disabled-input">Valor</label>
-                                            <label id="txtValor" class="col-sm-7 control-label" for="disabled-input">Valor</label>
-                                        </div>
+                                    <div class="form-group">
+                                        <label for="lblMarca">Marca</label>
+                                        <input id="txtMarca" type="text" class="form-control" disabled="disabled">
                                     </div>
-                                </div>
+                                    <div class="form-group">
+                                        <label for="lblModelo">Modelo</label>
+                                        <input id="txtModelo" type="text" class="form-control" disabled="disabled"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="lblAno">Ano</label>
+                                        <input id="txtAno" type="text" class="form-control" disabled="disabled"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="lblCombustivel">Combustivel</label>
+                                        <input id="txtCombustivel" type="text" class="form-control" disabled="disabled"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="lblCodigoFipe">Código FIPE</label>
+                                        <input id="txtCodigoFipe" type="text" class="form-control" disabled="disabled"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="lblValor">Valor</label>
+                                        <input id="txtValor" type="text" class="form-control" disabled="disabled"/>
+                                    </div>
                             </fieldset>
                         </form>
                     </div>
