[add] Menu de Cadastros

--- a/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
@@ -37,6 +37,18 @@
             <h5 class="sidebar-nav-title">Template <a class="action-link" href="#"><i class="glyphicon glyphicon-refresh"></i></a></h5>
             <ul class="sidebar-nav">
                 <li>
+                    <a class="collapsed" href="#sidebar-levels" data-toggle="collapse" data-parent="#sidebar">
+                        <span class="icon">
+                            <i class="fa fa-folder-open"></i>
+                        </span>
+                        Cadastros
+                        <i class="toggle fa fa-angle-down"></i>
+                    </a>
+                    <ul id="sidebar-levels" class="collapse">
+                        <li><a href="#">Tabelas de Preço</a></li>
+                    </ul>
+                </li>
+                <li>
                     <!-- an example of nested submenu. basic bootstrap collapse component -->
                     <a class="collapsed" href="#sidebar-forms" data-toggle="collapse" data-parent="#sidebar">
                         <span class="icon">
