--- a/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/TabelasPreco/Create.cshtml
@@ -30,7 +30,7 @@
                 @Html.ValidationMessageFor(model => model.TipoFipe, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        @Html.Partial("_FaixaTabelaPreco")
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
