[add] chamada da view de tabela de precos no layout principal

--- a/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/VeiculoProtegido.UI.Mvc/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                         <i class="toggle fa fa-angle-down"></i>
                     </a>
                     <ul id="sidebar-levels" class="collapse">
-                        <li><a href="#">Tabelas de Preço</a></li>
+                        <li><a href="@Url.Action("Index", "TabelasPreco")">Tabelas de Preco</a></li>
                     </ul>
                 </li>
                 <li>
